unpackaged/main/default/objects/pse__WorkQueues__c/pse__WorkQueues__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object has been deprecated and will be removed in a future release.</description>
    <label>DEPRECATED: WorkQueues</label>
</CustomObject>