unpackaged/main/default/objects/pse__WorkQueues__c/fields/pse__Last_Queue_Manager_Execution__c.field-meta.xml
<CustomField>
    <fullName>pse__Last_Queue_Manager_Execution__c</fullName>
    <label>Last Queue Manager Execution</label>
    <type>DateTime</type>
</CustomField>