unpackaged/main/default/objects/pse__WorkQueues__c/fields/pse__Scheduled_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Job_ID__c</fullName>
    <label>Scheduled Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>