unpackaged/main/default/objects/pse__WorkQueues__c/fields/pse__Use_With_Billing_Recalc__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_With_Billing_Recalc__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use With Billing Recalc</label>
    <type>Checkbox</type>
</CustomField>