unpackaged/main/default/objects/pse__WorkQueues__c/fields/pse__Use_With_Missing_Time_Cards__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_With_Missing_Time_Cards__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use With Missing Time Cards</label>
    <type>Checkbox</type>
</CustomField>