unpackaged/main/default/objects/pse__WorkQueues__c/fields/pse__Use_With_RPGPR_Maint__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_With_RPGPR_Maint__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use With RPGPR Maint</label>
    <type>Checkbox</type>
</CustomField>