unpackaged/main/default/objects/pse__WorkQueues__c/fields/pse__Work_Queue_Manager_Max_Threads__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_Queue_Manager_Max_Threads__c</fullName>
    <defaultValue>1</defaultValue>
    <description>How many concurrent batch jobs should the work queue manager submit at once. Current salesforce governor limits restrict this to 5 or less.</description>
    <label>Work Queue Manager Max Threads</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>