unpackaged/main/default/objects/pse__WorkQueues__c/fields/pse__Work_Queue_Monitor_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_Queue_Monitor_Schedule_ID__c</fullName>
    <description>DEPRECATED</description>
    <inlineHelpText>DEPRECATED</inlineHelpText>
    <label>Work Queue Monitor Schedule ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>